--- a/index-fr.html
+++ b/index-fr.html
@@ -105,7 +105,9 @@
                 <div class="dropdown-items-divide-hr"></div>
                 <a class="dropdown-item" href="index-pt.html"><span class="item-text">Portuguese</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="#index-pl.html"><span class="item-text">Polish</span></a>
+                <a class="dropdown-item" href="index-pl.html"><span class="item-text">Polish</span></a>
+                <div class="dropdown-items-divide-hr"></div>
+                <a class="dropdown-item" href="index-de.html"><span class="item-text">German</span></a>
             </div>
           </li>
         </ul>
@@ -121,7 +123,7 @@
             <div class="col-lg-6">
               <div class="text-container">
                 <h2>QUEST CREATOR FOR<br></h2> <h3><span id="js-rotating">MANSIONS OF MADNESS, DESCENT</span></h3>
-                <p class="p-large">Valkyrie is an App to users built scenario/quests for Fantasy Flight Board Games.</p>
+                <p class="p-large">Valkyrie is an App to users built scenarios/quests for Fantasy Flight Board Games.</p>
                 <a class="btn-solid-lg page-scroll" href="#download-windows"><i class="fab fa-windows"></i>WINDOWS</a>
                 <a class="btn-solid-lg page-scroll" href="#download-android"><i class="fab fa-android"></i>ANDROID</a>
                 <a class="btn-solid-lg page-scroll" href="#download-macos"><i class="fab fa-apple"></i>MAC OS</a>
@@ -186,7 +188,7 @@
                       <div class="card-body">
                         <div class="text-wrapper">
                             <h4 class="card-title">Scenario Editor</h4>
-                            <p>Use the Scenario Editor to Place tokens and tiles whatever you want.</p>
+                            <p>Use the Scenario Editor to place tokens and tiles whatever you want.</p>
                         </div>
                       </div>
                     </div>
