--- a/index-es.html
+++ b/index-es.html
@@ -1,6 +1,6 @@
   
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,7 +19,7 @@
 	<meta property="og:type" content="article" />
 
   <!-- Website Title -->
-  <title>Valkyrie GM for Fantasy Flight Board Games</title>
+  <title>Valkyrie GM para los juegos de mesa de Fantasy Flight Games</title>
     
   <!-- Styles -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
@@ -95,19 +95,19 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle page-scroll" href="#details" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">LANGUAGE</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="index.html"><span class="item-text">English</span></a>
+                <a class="dropdown-item" href="index.html"><span class="item-text">Inglés</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-es.html"><span class="item-text">Spanish</span></a>
+                <a class="dropdown-item" href="index-es.html"><span class="item-text">Español</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-it.html"><span class="item-text">Italian</span></a>
+                <a class="dropdown-item" href="index-it.html"><span class="item-text">Italiano</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-fr.html"><span class="item-text">French</span></a>
+                <a class="dropdown-item" href="index-fr.html"><span class="item-text">Francés</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-pt.html"><span class="item-text">Portuguese</span></a>
+                <a class="dropdown-item" href="index-pt.html"><span class="item-text">Portugués</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-pl.html"><span class="item-text">Polish</span></a>
+                <a class="dropdown-item" href="index-pl.html"><span class="item-text">Polaco</span></a>
                 <div class="dropdown-items-divide-hr"></div>
-                <a class="dropdown-item" href="index-de.html"><span class="item-text">German</span></a>
+                <a class="dropdown-item" href="index-de.html"><span class="item-text">Alemán</span></a>
             </div>
           </li>
         </ul>
@@ -122,7 +122,7 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="text-container">
-                <h2>QUEST CREATOR FOR<br></h2> <h3><span id="js-rotating">MANSIONS OF MADNESS, DESCENT</span></h3>
+                <h2>CREADOR DE ESCENARIOS/MISIONES PARA<br></h2> <h3><span id="js-rotating">MANSIONES DE LA LOCURA, DESCENT</span></h3>
                 <p class="p-large">Valkyrie is an App to users built scenarios/quests for Fantasy Flight Board Games.</p>
                 <a class="btn-solid-lg page-scroll" href="#download-windows"><i class="fab fa-windows"></i>WINDOWS</a>
                 <a class="btn-solid-lg page-scroll" href="#download-android"><i class="fab fa-android"></i>ANDROID</a>
@@ -152,7 +152,7 @@
         <div class="row">
           <div class="col-lg-12">
             <h2>FEATURES</h2>
-            <div class="p-heading p-large">Valkyrie was created for users wanting to create their own adventures and share it with the community.</div>
+            <div class="p-heading p-large">Valkyrie fue creada por usuarios que querían crear sus propias aventuras y compartirlas con la comunidad.</div>
           </div> <!-- end of col -->
         </div> <!-- end of row -->
         <div class="row">
@@ -179,16 +179,16 @@
                     <div class="card left-pane first">
                       <div class="card-body">
                           <div class="text-wrapper">
-                              <h4 class="card-title">Create your Quest</h4>
-                              <p>Be the Game Master and start to create your own stories.</p>
+                              <h4 class="card-title">Crear tu propia Misión/Escenario</h4>
+                              <p>Sé el Director de Juego y comienza a crear tus propias historias.</p>
                           </div>
                       </div>
                     </div>
                     <div class="card left-pane">
                       <div class="card-body">
                         <div class="text-wrapper">
-                            <h4 class="card-title">Scenario Editor</h4>
-                            <p>Use the Scenario Editor to place tokens and tiles whatever you want.</p>
+                            <h4 class="card-title">Editor de escenarios</h4>
+                            <p>Usa el Editor de Escenarios para colocar las fichas y módulos donde quieras.</p>
                         </div>
                       </div>
                     </div>
@@ -207,16 +207,16 @@
                     <div class="card right-pane first">
                       <div class="card-body">
                         <div class="text-wrapper">
-                            <h4 class="card-title">Event Driven</h4>
-                            <p>Create events for your tokens, tiles, heroes and more.</p>
+                            <h4 class="card-title">Motor de eventos</h4>
+                            <p>Crea eventos para tus fichas, módulos, héroes y demás.</p>
                         </div>
                       </div>
                     </div>
                     <div class="card right-pane">
                       <div class="card-body">
                         <div class="text-wrapper">
-                          <h4 class="card-title">Share with the community</h4>
-                          <p>After finishing others can play your scenario.</p>
+                          <h4 class="card-title">Compártelo con la comunidad</h4>
+                          <p>Al terminarlo, otros podrán jugar a tu escenario.</p>
                         </div>
                       </div>
                     </div>
@@ -242,21 +242,21 @@
                   <!-- Text And Icon Cards Area -->
                   <div class="col-md-6">
                     <div class="text-area">
-                      <h3>Test Your Scenario</h3>
-                      <p>After finishing your scenario you can play it or play the quests from other creators</p>
+                      <h3>Probar tu Escenario</h3>
+                      <p>Al terminar tu escenario puedes jugarlo o jugar las misiones creadas por otros</p>
                     </div> <!-- end of text-area -->
                     
                     <div class="icon-cards-area">
                       <div class="card">
                         <div class="card-body">
-                          <h4 class="card-title">Language Selection</h4>
-                          <p>Scenarios can be available in many languages, the community is able to localize the content</p>
+                          <h4 class="card-title">Seleccionar el Idioma</h4>
+                          <p>Los escenarios pueden estar disponibles en muchos idiomas, la comunidad puede traducir el contenido a otro idioma</p>
                         </div>
                       </div>
                       <div class="card">
                         <div class="card-body">
-                          <h4 class="card-title">Leave a Feedback</h4>
-                          <p>Players are invited to review the scenario at the end of the story, creating a feedback loop with the content creator</p>
+                          <h4 class="card-title">Dejar un Comentario</h4>
+                          <p>Se invita a los jugadores a que opinen sobre el escenario al terminar la historia, creando un intercambio de información con el creador del escenario</p>
                         </div>
                       </div>
                     </div> <!-- end of icon cards area -->
@@ -279,7 +279,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>PREVIEW</h2>
-                    <div class="p-heading p-large">Short Introduction Video</div>
+                    <div class="p-heading p-large">Breve Vídeo de Presentación</div>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -317,14 +317,14 @@
             <div class="col-lg-9">
               <div class="text-container">
                 <h3>Windows</h3>
-                <p>Run the installer and install to desired location, then start Valkyrie. The import might take a minute, so don't be too hasty. If import does not complete or is not working, please check out the <a href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting" target="_blank">Troubleshooting</a> section.</p>
-                <p>Requires the install of the FGG app related to the boardgame you want to play:</p>
+                <p>Ejecuta el instalador e instala el programa en la localización elegida, a continuación ejecuta Valkyrie. Importar los datos llevará unos minutos, ten paciencia. Si la importación de datos no se completa o no funciona, por favor, visita la sección "Problemas" en <a href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting" target="_blank"></a>.</p>
+                <p>Se necesita instalar la aplicación de FFG del juego de mesa que quieras jugar:</p>
                   <ul>
-                    <li>Mansions of Madness Second Edition requires the <a href="http://store.steampowered.com/app/478980/" target="_blank">Mansions of Madness</a> app.</li>
-                    <li>Descent: Journeys in the Dark (Second Edition) requires the <a href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Road to Legend</a> app.</li>
+                    <li>Mansiones de la locura, segunda edición, necesita la aplicación de Mansiones de la locura <a href="http://store.steampowered.com/app/478980/" target="_blank"></a>.</li>
+                    <li>Descent: Viaje a las tinieblas (segunda edición) necesita la aplicación Descent: Road to Legend <a href="http://store.steampowered.com/app/477200/" target="_blank">.</a></li>
                   </ul>
-                  <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-windows-2.4.09.zip">Download Latest ZIP</a>
-                  <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-windows-2.4.09.exe">Download Latest EXE</a>
+                  <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-windows-2.4.09.zip">Descargar el último ZIP</a>
+                  <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-windows-2.4.09.exe">Descargar el último EXE</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -339,7 +339,7 @@
             <div class="col-lg-9">
               <div class="text-container">
                 <h3>Android</h3>
-                <p>If you already have a version of Valkyrie installed, please uninstall it first.</p>
+                <p>Si ya hay una versión de Valkyrie instalada, por favor desinstálala primero.</p>
                 <p>Install the official app using the Google Play Store:</p>
                 <ul>
                   <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom" target="_blank">Mansions Of Madness Second Edition</a></li>
