--- a/index-es.html
+++ b/index-es.html
@@ -215,7 +215,7 @@
                     <div class="card right-pane">
                       <div class="card-body">
                         <div class="text-wrapper">
-                          <h4 class="card-title">Compártelo con la comunidad</h4>
+                          <h4 class="card-title">Compartir con la comunidad</h4>
                           <p>Al terminarlo, otros podrán jugar a tu escenario.</p>
                         </div>
                       </div>
@@ -340,7 +340,7 @@
               <div class="text-container">
                 <h3>Android</h3>
                 <p>Si ya hay una versión de Valkyrie instalada, por favor desinstálala primero.</p>
-                <p>Install the official app using the Google Play Store:</p>
+                <p>Instala la aplicación oficial usando Google Play Store:</p>
                 <ul>
                   <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom" target="_blank">Mansions Of Madness Second Edition</a></li>
                   <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl" target="_blank">Descent: Road to Legend</a></li>
