--- a/index-pt.html
+++ b/index-pt.html
@@ -323,8 +323,8 @@
                   <li>Mansions of Madness Second Edition precisa do <a href="http://store.steampowered.com/app/478980/" target="_blank">Mansions of Madness</a> app.</li>
                   <li>Descent: Journeys in the Dark (Second Edition) precisa do <a href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Road to Legend</a> app.</li>
                 </ul>
-                <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-windows-2.4.09.zip">Download Último ZIP</a>
-                <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-windows-2.4.09.exe">Download Último EXE</a>
+                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-windows-zip">Download Último ZIP</a>
+                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-windows-exe">Download Último EXE</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -353,7 +353,7 @@
                 <p>Se você ver apenas uma tela preta, vá até as configurações do aplicativo e verifique se as permissões de armazenamento estão habilitadas.</p>
 
                 <p>Se a importação falhar, verifique se você tem espaço suficiente. Cada jogo precisa de até 300 MB. Para garantir, tenha 1 GB de espaço livre.</p>
-                <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/Valkyrie-android-2.4.09.apk">Download Último</a>
+                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-android-apk">Download Último</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -381,7 +381,7 @@
                 <p>2. O app está salvo como uma exceção em suas configurações de segurança, e você pode abrir no futuro clicando duas vezes, como qualquer outro aplicativo.</p>
                 <p>Se a importação não for completa tente rodar Valkyrie como mais permissões.</p>
                 <p>Além disso, garanta que você não tem nenhuma permissão na pasta. Mova seu download fo Valkyrie para a pasta Applications dentro do Finder. Então execute no terminal "chmod +x /Applications/Valkyrie.app/Contents/MacOS/Valkyrie"</p>
-                <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-macos-2.4.09.zip">Download Último</a>
+                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-macos-zip">Download Último</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -399,7 +399,7 @@
                 <p>Para o Linux também não há importação automática:</p>
                 <p>1. Copie content/&lt;type&gt;/ffg para outra instalação or</p>
                 <p>2. Rode com -import &lt;location&gt; where &lt;location&gt; é Road to Legend ou Mansions of Madness data. Exemplo /home/&lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend for Road to Legend.</p>
-                <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-linux-2.4.09.tar.gz">Download Último</a>
+                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-linux-tar">Download Último</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -430,7 +430,7 @@
 
                 <p>Habilite "Unknown Sources" (Fontes desconhecidas) em Settings → Security → Unknown Sources (Configurações → Segurança → Fontes Desconhecidas). Copie o APK do Valkyrie para seu dispositivo. Rode o APK para instalar. Depois da instalação, você vai enconotrar um App chamado "Valkyrie" em seus aplicativos. Rode. Permita todas as permissões que o App peça. Aperte o botão "Import" dentro do App do Valkyrie. A importação pode levar um tempo. Depois da importação ser concluída você pode selecionar qual jogo quer usar.</p>
 
-                <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/Valkyrie-android-2.4.09.apk">Download Último</a>
+                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-android-apk">Download Último</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
