Fixing all links

--- a/index-de.html
+++ b/index-de.html
@@ -323,8 +323,8 @@
                     <li>Mansions of Madness Second Edition erfordert die <a href="http://store.steampowered.com/app/478980/" target="_blank">Villen des Wahnsinns</a> app.</li>
                     <li>Descent: Die Reise ins Dunkel (Zweite Edition) erfordert die <a href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Weg zum Ruhm</a> app.</li>
                   </ul>
-                  <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-windows-2.4.09.zip">Neuste Version als .zip herunterladen</a>
-                  <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-windows-2.4.09.exe">Neuste Version als .exe herunterladen</a>
+                  <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-windows-zip">Neuste Version als .zip herunterladen</a>
+                  <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-windows-exe">Neuste Version als .exe herunterladen</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -353,7 +353,7 @@
                 <p>Wenn Sie einen schwarzen Bildschirm erhalten, gehen Sie bitte zu den App-Einstellungen und überprüfen Sie, ob der Zugriff auf den Systemspeicher eingeschaltet ist.</p>
 
                 <p>Wenn der Import fehlschlägt, stellen Sie sicher, dass Sie genügend internen Speicherplatz zur Verfügung haben. Jeder Spieltyp erfordert bis zu 300 MB. Um besonders sicher zu gehen, sollten Sie 1 GB freien Speicherplatz zur Verfügung haben.</p>
-                <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/Valkyrie-android-2.4.09.apk">Neuste Version herunterladen</a>
+                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-android-apk">Neuste Version herunterladen</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -380,7 +380,7 @@
                   <p>2. Die App wird als Ausnahme zu Ihren Sicherheitseinstellungen gespeichert, und Sie können sie in Zukunft wie jede andere registrierte App durch einen Doppelklick öffnen.</p>
                   <p>Falls der Import nicht abgeschlossen werden kann, versuchen Sie bitte, Walküre mit erhöhten Privilegien auszuführen.</p>
                   <p>Stellen Sie außerdem sicher, dass Sie Ordner-Berechtigungen haben. Verschieben Sie Ihren Valkyrie-Download in den Ordner Programme innerhalb der Finder-Anwendung. Führen Sie dann chmod +x /Applications/Valkyrie.app/Inhalte/MacOS/Valkyrie in der Terminal-Anwendung aus.</p>
-                  <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-macos-2.4.09.zip">Neueste Version herunterladen</a>
+                  <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-macos-zip">Neueste Version herunterladen</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -399,7 +399,7 @@
                 <p>1. Inhalte kopieren/&lt;tippen sie&gt;/ffg von einem anderen importierten Speicherort</p>
                 <p>2. Führen sie -import &lt;Speicherort aus&gt;, wobei &lt;Speicherort&gt; der Ort ist, an dem Ihre Wege zum Ruhm oder Villen des Wahnsinns Dateien liegen.</p> 
                 <p>Zum Beispiel /home/ &lt;Benutzername&lt; /.local/share/Steam/steamapps/common/Descent Road to Legend für Wege zum Ruhm.</p>
-                <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/valkyrie-linux-2.4.09.tar.gz">Neueste Version herunterladen</a>
+                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-linux-tar">Neueste Version herunterladen</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -430,7 +430,7 @@
 
                 <p>Aktivieren Sie "Unbekannte Quellen" unter Einstellungen → Sicherheit → Unbekannte Quellen. Kopieren Sie die valkyrie APK-Datei auf Ihr Gerät. Führen Sie das Valkyrie APK zur Installation aus. Nach der Installation finden Sie eine Anwendung namens "Valkyrie" in Ihrer Liste der Anwendungen. Führen Sie sie aus. Lassen Sie alle Berechtigungen zu, die die Anwendung anfordert. Klicken Sie auf die Schaltfläche "Importieren" innerhalb der Walküre-Anwendung. Der Import kann eine Weile dauern. Nach dem Import sind Sie in der Lage, den gewünschten Spieltyp auszuführen.</p>
 
-                <a class="btn-solid-reg popup-with-move-anim" href="https://github.com/NPBruce/valkyrie/releases/download/release%2F2.4%2Fv2.4.09/Valkyrie-android-2.4.09.apk">Neueste Version herunterladen</a>
+                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-android-apk">Neueste Version herunterladen</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
