--- a/index-es.html
+++ b/index-es.html
@@ -323,8 +323,8 @@
                     <li>Mansiones de la locura, segunda edición, necesita la aplicación de Mansiones de la locura <a href="http://store.steampowered.com/app/478980/" target="_blank"></a>.</li>
                     <li>Descent: Viaje a las tinieblas (segunda edición) necesita la aplicación Descent: Road to Legend <a href="http://store.steampowered.com/app/477200/" target="_blank">.</a></li>
                   </ul>
-                  <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-windows-zip">Descargar el último ZIP</a>
-                  <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-windows-exe">Descargar el último EXE</a>
+                  <a id="valkyrieWindowsZip" class="btn-solid-reg popup-with-move-anim">Descargar el último ZIP</a>
+                  <a id="valkyrieWindowsExe" class="btn-solid-reg popup-with-move-anim">Descargar el último EXE</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -353,7 +353,7 @@
                 <p>If you get a black screen, please go to app settings and check that storage permissions are on.</p>
 
                 <p>If the import fails, make sure you have enough internal storage space available. Each game type requires up to 300 MB. To be extra sure, have 1 GB of free space available.</p>
-                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-android-apk">Download Latest</a>
+                <a id="valkyrieAndroid" class="btn-solid-reg popup-with-move-anim">Download Latest</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -381,7 +381,7 @@
                   <p>2. The app is saved as an exception to your security settings, and you can open it in the future by double-clicking it just as you can any registered app.</p>
                   <p>If importing does not complete, please attempt to run Valkyrie at elevated privileges.</p>
                   <p>Also make sure, you have folder permissions. Move your Valkyrie download to the folder Applications inside the Finder app. Then run chmod +x /Applications/Valkyrie.app/Contents/MacOS/Valkyrie in the Terminal app.</p>
-                  <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-macos-zip">Download Latest</a>
+                  <a id="valkyrieMacos" class="btn-solid-reg popup-with-move-anim">Download Latest</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -400,7 +400,7 @@
                 <p>1. Copy content/&lt;type&gt;/ffg from another imported installation or</p>
                 <p>2. Run with -import &lt;location&gt; where &lt;location&gt; is Road to Legend or Mansions of Madness data.</p> 
                 <p>For example /home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend for Road to Legend.</p>
-                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-linux-tar">Download Latest</a>
+                <a id="valkyrieLinux" class="btn-solid-reg popup-with-move-anim">Download Latest</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -430,8 +430,7 @@
                 <p><b>Road to Legend</b>: com.fantasyflightgames.rtl/ main.459.com.fantasyflightgames.rtl.obb</p>
 
                 <p>Enable "Unknown Sources" under Settings → Security → Unknown Sources. Copy the valkyrie APK file to your device. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie" in your list of apps. Run it. Allow all permissions the app requests. Press the "Import" button inside the Valkyrie app. The import might take a while. After the import you are able to run the desired game type.</p>
-
-                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-android-apk">Download Latest</a>
+                <a id="valkyrieAndroid2" class="btn-solid-reg popup-with-move-anim">Download Latest</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -470,6 +469,49 @@
     <script src="web/js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
     <script src="web/js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
     <script src="web/js/scripts.js"></script> <!-- Custom scripts -->
+
+    <script>
+        $(document).ready(function () {
+            fallbackDownloadUrl = "https://github.com/NPBruce/valkyrie/releases/latest";
+            valkyrieAndroid = fallbackDownloadUrl;
+            valkyrieLinux = fallbackDownloadUrl;
+            valkyrieMacos = fallbackDownloadUrl;
+            valkyrieWindowsExe = fallbackDownloadUrl;
+            valkyrieWindows7z = fallbackDownloadUrl;
+            valkyrieWindowsZip = fallbackDownloadUrl;
+
+            $.get('https://api.github.com/repos/NPBruce/valkyrie/releases/latest', function (data) {
+                $.each(data.assets, function(i, v) {
+                    if (v.name.toLowerCase().startsWith("valkyrie-android") == true){
+                        valkyrieAndroid = v.browser_download_url;
+                    }
+                    else if (v.name.toLowerCase().startsWith("valkyrie-linux") == true){
+                        valkyrieLinux = v.browser_download_url;
+                    }
+                    else if (v.name.toLowerCase().startsWith("valkyrie-macos") == true){
+                        valkyrieMacos = v.browser_download_url;
+                    }
+                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".exe") == true){
+                        valkyrieWindowsExe = v.browser_download_url;
+                    }
+                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".7z") == true){
+                        valkyrieWindows7z = v.browser_download_url;
+                    }
+                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".zip") == true){
+                        valkyrieWindowsZip = v.browser_download_url;
+                    }
+                });
+
+                $('#valkyrieAndroid2').attr('href', valkyrieAndroid);
+                $('#valkyrieAndroid').attr('href', valkyrieAndroid);
+                $('#valkyrieLinux').attr('href', valkyrieLinux);
+                $('#valkyrieMacos').attr('href', valkyrieMacos);
+                $('#valkyrieWindows7z').attr('href', valkyrieWindows7z);
+                $('#valkyrieWindowsExe').attr('href', valkyrieWindowsExe);
+                $('#valkyrieWindowsZip').attr('href', valkyrieWindowsZip);
+            });
+        });
+    </script>
   </body>
 </html>
     
