--- a/index-pl.html
+++ b/index-pl.html
@@ -323,8 +323,8 @@
                     <li>Posiadłość Szaleństwa druga edycja wymaga aplikacji <a href="http://store.steampowered.com/app/478980/" target="_blank">Posiadłość Szaleństwa</a>.</li>
                     <li>Descent: Wędrówki w mroku (Druga Edycja) wymaga aplikacji <a href="http://store.steampowered.com/app/477200/" target="_blank">Descent: Droga do Legendy</a>.</li>
                   </ul>
-                  <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-windows-zip">Pobierz najnowszy ZIP</a>
-                  <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-windows-exe">Pobiesz najnowszy EXE</a>
+                  <a id="valkyrieWindowsZip" class="btn-solid-reg popup-with-move-anim">Pobierz najnowszy ZIP</a>
+                  <a id="valkyrieWindowsExe" class="btn-solid-reg popup-with-move-anim">Pobiesz najnowszy EXE</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -353,7 +353,7 @@
                 <p>Jeżeli ekran pozostaje czarny sprawdź w ustawieniach aplikacji czy została udzielona zgoda na dostęp do plików.</p>
 
                 <p>Jeżeli import zakończy się niepowodzeniem, sprawdź czy posiadasz wystarczającą ilość wolnego miejsca we wbudowanej pamięci. Każda z gier wymaga do 300 MB. Dla pewności warto mieć ok. 1GB wolnego miejsca.</p>
-                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-android-apk">Pobierz</a>
+                <a id="valkyrieAndroid" class="btn-solid-reg popup-with-move-anim">Pobierz</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -380,7 +380,7 @@
                   <p>2. Aplikacja została zapisana jako wyjątek w ustawieniach zabezpieczeń i w przyszłości możesz ją otworzyć przez podwójne kliknięcie tak jak inne zarejestrowane aplikacje.</p>
                   <p>Jeżeli importowanie się nie zakończy, spróbuj uruchomić Valkyrie używając wyższego poziomu uprawnień.</p>
                   <p>Sprawdź też czy posiadasz uprawnienia dostępu do folderów. Przenieś ściągnięty plik Valkyrie do folderu Applications w aplikacji Finder. Następnie uruchom chmod +x/Applications/Valkyrie.app/Contents/MacOS/Valkyrie w aplikacji Terminal.</p>
-                  <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-macos-zip">Pobierz</a>
+                  <a id="valkyrieMacos" class="btn-solid-reg popup-with-move-anim">Pobierz</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -399,7 +399,7 @@
                 <p>1. Skopiować zawartość /&lt;type&gt;/ffg z innej zaimportowanej aplikacji lub</p>
                 <p>2. Uruchomić -import &lt;location&gt; gdzie &lt;location&gt; to Road to Legend lub Mansions of Madness data.</p> 
                 <p>Na przykład /home/ &lt;username&gt; /.local/share/Steam/steamapps/common/Descent Road to Legend dla Drogi do Legendy.</p>
-                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-linux-tar">Pobierz</a>
+                <a id="valkyrieLinux" class="btn-solid-reg popup-with-move-anim">Pobierz</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-lg-3">
@@ -430,7 +430,7 @@
 
                 <p>Włącz "Nieznane Źródła" w Ustawienia → Zabezpieczenia → Nieznane Źródła. Skopiuj plik Valkyrie APK na swoje urządzenie. Uruchom i zainstaluj Valkyrie APK. Po zakończeniu instalacji "Valkyrie" pojawi się na liście aplikacji. Uruchom ją. Udziel aplikacji wymaganych zezwoleń. Wciśnij przycisk "Zaimportuj". Proces może potrwać dłuższą chwilę. Po zakończeniu importu możesz wybrać i rozpocząć grę.</p>
 
-                <a class="btn-solid-reg popup-with-move-anim" href="https://bit.ly/valk-android-apk">Pobierz</a>
+                <a id="valkyrieAndroid2" class="btn-solid-reg popup-with-move-anim">Pobierz</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
           </div> <!-- end of row -->
@@ -469,6 +469,50 @@
     <script src="web/js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
     <script src="web/js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
     <script src="web/js/scripts.js"></script> <!-- Custom scripts -->
+
+    <script>
+        $(document).ready(function () {
+            fallbackDownloadUrl = "https://github.com/NPBruce/valkyrie/releases/latest";
+            valkyrieAndroid = fallbackDownloadUrl;
+            valkyrieLinux = fallbackDownloadUrl;
+            valkyrieMacos = fallbackDownloadUrl;
+            valkyrieWindowsExe = fallbackDownloadUrl;
+            valkyrieWindows7z = fallbackDownloadUrl;
+            valkyrieWindowsZip = fallbackDownloadUrl;
+
+            $.get('https://api.github.com/repos/NPBruce/valkyrie/releases/latest', function (data) {
+                $.each(data.assets, function(i, v) {
+                    if (v.name.toLowerCase().startsWith("valkyrie-android") == true){
+                        valkyrieAndroid = v.browser_download_url;
+                    }
+                    else if (v.name.toLowerCase().startsWith("valkyrie-linux") == true){
+                        valkyrieLinux = v.browser_download_url;
+                    }
+                    else if (v.name.toLowerCase().startsWith("valkyrie-macos") == true){
+                        valkyrieMacos = v.browser_download_url;
+                    }
+                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".exe") == true){
+                        valkyrieWindowsExe = v.browser_download_url;
+                    }
+                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".7z") == true){
+                        valkyrieWindows7z = v.browser_download_url;
+                    }
+                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".zip") == true){
+                        valkyrieWindowsZip = v.browser_download_url;
+                    }
+                });
+
+                $('#valkyrieAndroid2').attr('href', valkyrieAndroid);
+                $('#valkyrieAndroid').attr('href', valkyrieAndroid);
+                $('#valkyrieLinux').attr('href', valkyrieLinux);
+                $('#valkyrieMacos').attr('href', valkyrieMacos);
+                $('#valkyrieWindows7z').attr('href', valkyrieWindows7z);
+                $('#valkyrieWindowsExe').attr('href', valkyrieWindowsExe);
+                $('#valkyrieWindowsZip').attr('href', valkyrieWindowsZip);
+            });
+        });
+    </script>
+
   </body>
 </html>
    
