--- a/index-es.html
+++ b/index-es.html
@@ -321,7 +321,7 @@
                 <p>Se necesita instalar la aplicación de FFG del juego de mesa que quieras jugar:</p>
                   <ul>
                     <li>Mansiones de la locura, segunda edición, necesita la aplicación de Mansiones de la locura <a href="http://store.steampowered.com/app/478980/" target="_blank"></a>.</li>
-                    <li>Descent: Viaje a las tinieblas (segunda edición) necesita la aplicación Descent: Road to Legend <a href="http://store.steampowered.com/app/477200/" target="_blank">.</a></li>
+                    <li>Descent: Viaje a las tinieblas (segunda edición) necesita la aplicación Descent: Camino a la Leyenda <a href="http://store.steampowered.com/app/477200/" target="_blank">.</a></li>
                   </ul>
                   <a id="valkyrieWindowsZip" class="btn-solid-reg popup-with-move-anim">Descargar el último ZIP</a>
                   <a id="valkyrieWindowsExe" class="btn-solid-reg popup-with-move-anim">Descargar el último EXE</a>
@@ -342,17 +342,15 @@
                 <p>Si ya hay una versión de Valkyrie instalada, por favor desinstálala primero.</p>
                 <p>Instala la aplicación oficial usando Google Play Store:</p>
                 <ul>
-                  <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom" target="_blank">Mansions Of Madness Second Edition</a></li>
-                  <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl" target="_blank">Descent: Road to Legend</a></li>
+                  <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.mom" target="_blank">Mansiones de la Locura Segunda Edición</a></li>
+                  <li><a href="https://play.google.com/store/apps/details?id=com.fantasyflightgames.rtl" target="_blank">Descent: Camino a la Leyenda</a></li>
                 </ul>
-                <p>1. Start the official app and wait until the loading is complete (the wait cursor inside the main menu is gone).</p> 
-                <p>2. Enable "Unknown Sources" under Settings → Security → Unknown Sources. Copy the Valkyrie APK file to your device.</p>
-                <p>3. Run the valkyrie APK to install. After the install, you will find an app named "Valkyrie" in your list of apps. </p>
-                <p>4. Run it. Allow all permissions the app requests. Press the "Import" button inside the Valkyrie app. The import might take a while. After the import you are able to run the desired game type.</p>
-
-                <p>If you get a black screen, please go to app settings and check that storage permissions are on.</p>
-
-                <p>If the import fails, make sure you have enough internal storage space available. Each game type requires up to 300 MB. To be extra sure, have 1 GB of free space available.</p>
+                <p>1. Ejecuta la apliación oficial y espera hasta que se cargue por completo (hasta que el cursor de espera del menú principal desparezca).</p> 
+                <p>2. Habilita "Orígenes (o Fuentes) desconocidos" en la configuración Ajustes → Seguridad → Orígenes desconcidos. Copia el archivo APK de Valkyrie en tu dispositivo.</p>
+                <p>3. Ejecuta el APK de Valkyrie para instalarla la aplicación. Tras la instalación, encontrarás una aplicación llamada "Valkyrie" en tu lista de aplicaciones. </p>
+                <p>4. Ejecuta la aplicación. Habilita todos los permisos solicitados. Pulsa el botón "Importar" en la aplicación de Valkyrie. La importación puede tardar un rato. Tras la importación podrás elegir el tipo de juego a iniciar.</p>
+                <p>Si la pantalla se queda en negro, por favor, comprueba en los ajustes del dispositivo y asegúrate de que están habilitados los permisos para almacenar datos.</p>
+                <p>Si la importación falla, asegúrate de que tienes suficiente espacio libre. Cada tipo de juego necesita unos 300 MB. Es aconsejable tener al menos 1 GB de espacio libre para evitar problemas.</p>
                 <a id="valkyrieAndroid" class="btn-solid-reg popup-with-move-anim">Download Latest</a>
               </div> <!-- end of text-container -->
             </div> <!-- end of col -->
@@ -374,7 +372,7 @@
             <div class="col-lg-9">
               <div class="text-container">
                   <h3>MAC OS</h3>
-                  <p>Mac OS Gatekeeper must be disabled:</p>
+                  <p>Mac OS Gatekeeper debe estar desabilitado:</p>
                   <p>In the Finder, locate the app you want to open. Don’t use Launchpad to do this. Launchpad doesn’t allow you to access the shortcut menu.</p>
                   <p>1. Press the Control key and click the app icon, then choose Open from the shortcut menu.
                   Click Open.</p>
