--- a/index-es.html
+++ b/index-es.html
@@ -317,7 +317,7 @@
             <div class="col-lg-9">
               <div class="text-container">
                 <h3>Windows</h3>
-                <p>Ejecuta el instalador e instala el programa en la localización elegida, a continuación ejecuta Valkyrie. Importar los datos llevará unos minutos, ten paciencia. Si la importación de datos no se completa o no funciona, por favor, visita la sección "Problemas" en <a href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting" target="_blank"></a>.</p>
+                <p>Ejecuta el instalador e instala el programa en la ubicación seleccionada, a continuación ejecuta Valkyrie. Importar los datos llevará unos minutos, ten paciencia. Si la importación de datos no se completa o no funciona, por favor, visita la sección "Problemas" en <a href="https://github.com/NPBruce/valkyrie/wiki/Troubleshooting" target="_blank"></a>.</p>
                 <p>Se necesita instalar la aplicación de FFG del juego de mesa que quieras jugar:</p>
                   <ul>
                     <li>Mansiones de la locura, segunda edición, necesita la aplicación de Mansiones de la locura <a href="http://store.steampowered.com/app/478980/" target="_blank"></a>.</li>
