--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Valkyrie is an App to build scenarios/quests and share them with players around the world. Both Mnsions of Madness Second Edition and Descent are supported and scenarios can be available in multiple languages, localized by the community.">
 
   <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-	<meta property="og:site_name" content="Valkyrie Conotent Creator" /> <!-- website name -->
+	<meta property="og:site_name" content="" /> <!-- website name -->
 	<meta property="og:site" content="" /> <!-- website link -->
 	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
 	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
@@ -477,51 +477,7 @@
     <script src="web/js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
     <script src="web/js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
     <script src="web/js/scripts.js"></script> <!-- Custom scripts -->
-
-      <script>
-        $(document).ready(function () {
-            fallbackDownloadUrl = "https://github.com/NPBruce/valkyrie/releases/latest";
-            valkyrieAndroid = fallbackDownloadUrl;
-            valkyrieLinux = fallbackDownloadUrl;
-            valkyrieMacos = fallbackDownloadUrl;
-            valkyrieWindowsExe = fallbackDownloadUrl;
-            valkyrieWindows7z = fallbackDownloadUrl;
-            valkyrieWindowsZip = fallbackDownloadUrl;
-
-            $.get('https://api.github.com/repos/NPBruce/valkyrie/releases/latest', function (data) {
-                $.each(data.assets, function(i, v) {
-                    if (v.name.toLowerCase().startsWith("valkyrie-android") == true){
-                        valkyrieAndroid = v.browser_download_url;
-                    }
-                    else if (v.name.toLowerCase().startsWith("valkyrie-linux") == true){
-                        valkyrieLinux = v.browser_download_url;
-                    }
-                    else if (v.name.toLowerCase().startsWith("valkyrie-macos") == true){
-                        valkyrieMacos = v.browser_download_url;
-                    }
-                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".exe") == true){
-                        valkyrieWindowsExe = v.browser_download_url;
-                    }
-                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".7z") == true){
-                        valkyrieWindows7z = v.browser_download_url;
-                    }
-                    else if (v.name.toLowerCase().startsWith("valkyrie-windows") == true && v.name.toLowerCase().endsWith(".zip") == true){
-                        valkyrieWindowsZip = v.browser_download_url;
-                    }
-                });
-
-                $('#valkyrieWindowsZip').prop('href', valkyrieWindowsZip);
-                $('#valkyrieAndroid2').prop('href', valkyrieAndroid);
-                $('#valkyrieAndroid').prop('href', valkyrieAndroid);
-                $('#valkyrieLinux').prop('href', valkyrieLinux);
-                $('#valkyrieMacos').prop('href', valkyrieMacos);
-                $('#valkyrieWindows7z').prop('href', valkyrieWindows7z);
-                $('#valkyrieWindowsExe').prop('href', valkyrieWindowsExe);
+    <script src="web/js/indexScripts.js"></script> <!-- additional scripts for this page (e.g. for generating download links) -->
                 
-            });
-        });
-    </script>
-
   </body>
 </html>
-    
