--- a/index-de.html
+++ b/index-de.html
@@ -230,7 +230,7 @@
                       <div class="card-body">
                         <div class="text-wrapper">
                           <h4 class="card-title">Stelle anderen Autoren Fragen</h4>
-                          <p>Werde Teil der Valkyrie Discord Gemeinschaft und frage bei Problemen andere Autoren um Rat. (Link rechts oben)</p>
+                          <p>Werde Teil der Valkyrie Discord Gemeinschaft und frage bei Problemen andere Autoren um Rat. (Link oben rechts)</p>
                         </div>
                       </div>
                     </div>	
